# atlas

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
advisor/: cv_linkedin_advisor.md
brain/: SKILL.md  SKILL_social_search.md  run_brain.py
brain/prompts/: company_research.md  contact_discovery.md  cover_letter.md  cv_review.md  interview_prep_deep.md  legitimacy.md  pdf_check.md  portfolio_research.md  profile_expand.md  style_rules.md  upskill.md
config/: companies.example.yaml  criteria.example.md  sources.yaml
config/csv_templates/: default.yaml
dashboard/backend/: main.py
dashboard/frontend/: DESIGN_SYSTEM.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: ARCHITECTURE.md  RATE_LIMITING.md  SECURITY.md  SETUP.md
docs/research/: architecture-cv-recommendations.md  atlas-domain-coupling-ledger.md
engine/: __init__.py  advisor.py  analytics.py  cli.py  config.py  export.py  geo.py  heartbeat.py  intents.py  knockouts.py  lang.py  normalize.py  paths.py  profile_expand.py  profiles.py  reposts.py  stories.py  upskill.py  util.py
engine/cv/: build.py  import_cv.py  keywords.py  match.py  naming.py  parse_check.py  pdf_check.py  placeholder.py  promote.py  render.py  review.py  review_report.py  tailor.py
engine/db/: models.py  schema.sql
engine/discovery/: health.py  http.py  jobspy_source.py  liveness.py  rate_limiter.py  registry.py  reverse.py  runner.py
engine/interview/: __init__.py  interview_prep.py
engine/learning/: __init__.py  patterns.py  runner.py
engine/outreach/: build.py  followups.py  templates.py
engine/portfolio/: __init__.py  builder.py  peer_examples.py  peer_research.py  prompt.py
engine/referrals/: connections.py
engine/scoring/: dedupe.py  fit.py  (+2 more)
plans/: 001-brain-json-flag.md  002-only-indeed-linkedin.md  003-lever-salary-interval.md  004-confine-cv-download.md  005-robustness-listjobs-datetime.md  006-followup-cadence.md  007-reproducible-pytest.md  008-dependency-hygiene.md  009-remove-dead-api-package.md  010-stale-docs-and-onboarding.md  011-dashboard-read-overhead.md  012-pdf-render-parity.md  013-engine-characterization-tests.md  014-shared-sqlite-connection.md  015-linting-and-formatting.md  016-frontend-tests.md  017-agents-md-and-check-script.md  018-workday-source-spike.md  019-dashboard-trigger-discover-spike.md  020-post-route-origin-checks.md  021-profile-switch-race.md  022-docs-truth-pass.md  023-checksh-frontend-build.md  024-first-name-whitespace-guard.md  025-frontend-tests-settings-onboarding.md  026-architecture-docs-v2-refresh.md  027-brain-prompts-untrusted-input-rule.md  028-intents-registry-hygiene.md  029-aware-utc-parse-helper.md  030-windows-wsl-compat.md  README.md
profile/: master_cv.example.yaml
scripts/: check.sh  run.sh
tests/: conftest.py  test_advisor_domain.py  test_api_domain.py  test_backend_api.py  test_brain_dry_run.py  test_brain_intents.py  test_brain_planner.py  test_cli_open.py  test_criteria_api.py  test_criteria_fields.py  test_criteria_save.py  test_cv_import_api.py  test_cv_layout.py  test_cv_placeholder.py  test_cv_placeholder_cli.py  test_cv_promote.py  test_cv_review.py  test_db_geo.py  test_demo_sources.py  test_engine.py  test_export.py  test_f3_analytics.py  test_f3_backend_api.py  test_f3_config_writers.py  test_f3_db.py  test_f3_followups_v2.py  test_f3_knockouts.py  test_f3_reverse_discovery.py  test_f3_score_breakdown.py  test_f3_stories.py  test_fit_domain.py  test_frontmatter.py  test_geo.py  test_geo_extraction.py  test_geo_scoring.py  test_import_cv.py  test_import_cv_domain.py  test_intent_company_research.py  test_intent_contact_discovery.py  test_intent_portfolio_research.py  (+35 more)
(+166 files in other folders)
