[project]
name = "atlas"
version = "0.1.0"
description = "Personal job-search automation cockpit (local, subscription-funded)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.82",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "docxtpl>=0.18",
    "jinja2>=3.1",
    "rapidfuzz>=3.9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]

[project.scripts]
atlas = "engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
