[project]
name = "atlas"
version = "0.1.0"
description = "Personal job-search automation cockpit (local, subscription-funded)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-jobspy>=1.1.82",
    "pandas>=2.2",                # imported directly in engine/discovery/jobspy_source.py
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",         # imported directly in engine/cli.py
    "pyyaml>=6.0",
    "python-docx>=1.1",
    "rapidfuzz>=3.9",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "reportlab>=4.2",
    "pdfplumber>=0.11",
    "python-multipart>=0.0.9", # FastAPI UploadFile parsing (POST /api/cv/import)
]

# Dev tooling lives in a PEP 735 dependency group so a plain `uv sync` installs it by default,
# making `uv run pytest` reproducibly green (a bare `pytest` would pick up a global interpreter).
[dependency-groups]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.scripts]
atlas = "engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["dashboard/frontend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "BLE", "C4", "SIM"]
ignore = ["E501"]  # line length is the formatter's job, not a lint error

[tool.ruff.lint.flake8-bugbear]
# FastAPI/typer use call-expressions as parameter defaults by design; not a B008 smell.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"
